--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -108,6 +108,7 @@
                 <li class="active"><a href="index.html"><i class="fa fa-home"></i> <span>控制列表</span></a></li>
                 <li><a href="{:url('admin/Carousel/index')}"><i class="fa fa-laptop"></i><span>轮播图管理</span></a></li>
                 <li><a href="{:url('admin/Comment/index')}"><i class="fa fa-bullhorn"></i> <span>评论管理</span></a></li>
+                <li><a href="{:url('admin/Users/index')}"><i class="fa fa-bullhorn"></i> <span>用户管理</span></a></li>
                 <li class="menu-list"><a href=""><i class="fa fa-book"></i> <span>管理员管理</span></a>
                     <ul class="sub-menu-list">
                         <li><a href="{:url('admin/user/index')}">管理员列表</a></li>
