--- a/public/static/app/index/css/style.css
+++ b/public/static/app/index/css/style.css
@@ -211,7 +211,7 @@ padding: 10px 15px;border-left: 1px solid rgba(255,255,255,0.65);font-size: 13px
 .search-area{position: absolute;top: 50%;left: 0;right: 0;width: 500px;margin: -50px auto auto;}
 .search-area input[type="text"]{width: 100%;height:60px;border-bottom: 1px solid #ffffff;background-color: transparent;border-top: 0px;border-left:0px;border-right:0px;color: #ffffff;padding: 8px 50px 8px 10px;}
 .search-area input[type="submit"],.search-area button{position: absolute;top: 0px; right:0px;background-color: transparent;border: 0px;color: #ffffff;line-height: 60px;font-size: 20px;}
-.gt_search_remove_btn{position: absolute;top: 20px;right: 30px;color: #ffffff;font-size: 25px;cursor: pointer;}
+.gt_search_remove_btn{position: absolute;top: 10px;right: 30px;font-size: 25px;cursor: pointer;}
 /*
 	  ==============================================================
 		   Navigation Style
