--- a/application/admin/view/activities/ActivitiesBusList.html
+++ b/application/admin/view/activities/ActivitiesBusList.html
@@ -101,49 +101,47 @@
                         </div>
 
                         <div class="form-group">
-                            <label for="exampleInputEmail1">活动名称</label>
-                            <input type="text" name="ac_abstract" class="form-control" id="exampleInputEmail1" placeholder="请输入活动名称">
+                            <label for="exampleInputEmail1">活动简介</label>
+                            <input type="text" name="ac_abstract" class="form-control" id="exampleInputEmail1" placeholder="请输入活动简介">
                         </div>
 
                         <div class="form-group">
                             <label for="exampleInputEmail1">活动开始时间</label>
-                            <input type="time" name="ac_opentime" class="form-control" id="exampleInputEmail1" placeholder="请输入活动名称">
+                            <input type="datetime-local" name="ac_opentime" class="form-control" id="exampleInputEmail1" placeholder="请输入活动开始时间">
                         </div>
                         <div class="form-group">
                             <label for="exampleInputEmail1">活动结束时间</label>
-                            <input type="time" name="ac_closetime" class="form-control" id="exampleInputEmail1" placeholder="请输入活动名称">
+                            <input type="datetime-local" name="ac_closetime" class="form-control" id="exampleInputEmail1" placeholder="请输入活动结束时间">
                         </div>
 
                          <div class="form-group">
-                            <label for="exampleInputEmail1">活动地点</label>
-                            <input type="text" name="ac_spot" class="form-control" id="exampleInputEmail1" placeholder="请输入活动名称">
+                            <label for="exampleInputEmail1">活动举办地点</label>
+                            <input type="text" name="ac_spot" class="form-control" id="exampleInputEmail1" placeholder="请输入活动举办地点">
                         </div>
 
                          <div class="form-group">
                             <label for="exampleInputEmail1">主办方</label>
-                            <input type="text" name="ac_host" class="form-control" id="exampleInputEmail1" placeholder="请输入活动名称">
+                            <input type="text" name="ac_host" class="form-control" id="exampleInputEmail1" placeholder="请输入主办方名称">
                         </div>
 
                         <div class="form-group">
                             <label for="exampleInputPassword1">活动收费</label>
-                            <input type="text" name="ac_price" class="form-control" id="exampleInputPassword1" placeholder="请输入活动简介">
+                            <input type="text" name="ac_price" class="form-control" id="exampleInputPassword1" placeholder="请输入活动收费">
                         </div>
-
-                        <div class="form-group">
-                            <label for="exampleInputPassword1">活动状态</label>
-                            <input type="text" name="ac_status" class="form-control" id="exampleInputPassword1" placeholder="请输入活动简介">
-                        </div>
-
                         <div class="form-group">
                             <label for="exampleInputPassword1">活动限定人数</label>
-                            <input type="text" name="ac_contain" class="form-control" id="exampleInputPassword1" placeholder="请输入活动简介">
+                            <input type="text" name="ac_contain" class="form-control" id="exampleInputPassword1" placeholder="请输入活动限定人数">
                         </div>
 
                         <div class="form-group">
                             <label for="exampleInputPassword1">活动详情介绍</label>
-                            <input type="text" name="ac_details" class="form-control" id="exampleInputPassword1" placeholder="请输入活动简介">
+                            <input type="text" name="ac_details" class="form-control" id="exampleInputPassword1" placeholder="请输入活动详情介绍">
                         </div>
 
+                         <div class="form-group">
+                            <label for="exampleInputPassword1">活动状态</label>
+                            <span><input type="checkbox" name="ac_status"/> 是否生效</span>
+                        </div>
                         <button type="submit" class="btn btn-default">提交</button>
                     </form>
                 </div>
