--- a/application/admin/view/activities/ActivitiesBusListDatails.html
+++ b/application/admin/view/activities/ActivitiesBusListDatails.html
@@ -104,12 +104,12 @@
                         </div>
                         <div class="form-group">
                             <label for="exampleInputPassword1">活动开始时间</label>
-                            <input type="text" name="ac_opentime" class="form-control" id="exampleInputPassword1" value="{$data.ac_opentime}">
+                            <input type="datetime-local" name="ac_opentime" class="form-control" id="exampleInputPassword1" value="{$data.ac_opentime}">
                         </div>
 
                         <div class="form-group">
                             <label for="exampleInputPassword1">活动结束时间</label>
-                            <input type="text" name="ac_closetime" class="form-control" id="exampleInputPassword1" value="{$data.ac_closetime}">
+                            <input type="datetime-local" name="ac_closetime" class="form-control" id="exampleInputPassword1" value="{$data.ac_closetime}">
                         </div>
 
                         <div class="form-group">
@@ -134,15 +134,23 @@
                             <label for="exampleInputPassword1">活动价格</label>
                             <input type="text" name="ac_price" class="form-control" id="exampleInputPassword1" value="{$data.ac_price}">
                         </div>
-                        <div class="form-group">
+                        <!-- <div class="form-group">
                             <label for="exampleInputPassword1">活动状态</label>
                             <input type="text" name="ac_status" class="form-control" id="exampleInputPassword1" value="{$data.ac_status}">
-                        </div>
+                        </div> -->
 
                         <div class="form-group">
                             <label for="exampleInputPassword1">活动人数</label>
                             <input type="text" name="ac_contain" class="form-control" id="exampleInputPassword1" value="{$data.ac_contain}">
                         </div>
+
+                        <div class="form-group">
+                            <label for="exampleInputPassword1">活动状态</label>
+                            <span><input type="checkbox" name="ac_status" {if condition="$data.ac_status eq 1" }checked{/if}> 是否生效</span>
+                        </div>
+
+
+
                         <button type="submit" class="btn btn-default">提交</button>
                     </form>
                 </div>
